--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.5",
     "react-particles-js": "^3.4.1",
     "react-popupbox": "^2.0.8",
     "react-responsive-carousel": "^3.2.15",
